<resources>
    <string name="app_name">Sign Finder</string>
    <string name="title_nearby">Nearby</string>
    <string name="title_visited">Visited</string>
    <string name="title_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="logOut">Logout</string>

    <!-- Strings related to log in screen -->
    <string name="logInTitle">Sign Finder VA</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signUpButton">Sign Up</string>
    <string name="logInButton">Log In</string>
    <string name="channel_name">New Sign!</string>
    <string name="channel_description">New Sign!</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string-array name="search_options">
        <item>Keyword</item>
        <item>City/County</item>
        <item>District</item>
    </string-array>

    <string-array name="district_options">
        <item>Bristol</item>
        <item>Culpeper</item>
        <item>Fredericksburg</item>
        <item>Fredericksburg-Richmond</item>
        <item>Hampton Roads</item>
        <item>Lynchburg</item>
        <item>NOVA</item>
        <item>Richmond</item>
        <item>Salem</item>
        <item>Staunton</item>
    </string-array>

    <string-array name="search_radius">
        <item>0.5 miles</item>
        <item>1 mile</item>
        <item>2 miles</item>
        <item>5 miles</item>
    </string-array>

    <string-array name="search_radius_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="city_county_options">
        <item>Accomack</item>
        <item>Albemarle</item>
        <item>Alexandria</item>
        <item>Alleghany</item>
        <item>Amelia</item>
        <item>Amherst</item>
        <item>Appomattox</item>
        <item>Arlington</item>
        <item>Augusta</item>
        <item>Bath</item>
        <item>Bedford (County)</item>
        <item>Bedford (Ind. City)</item>
        <item>Bland</item>
        <item>Botetourt</item>
        <item>Bristol</item>
        <item>Brunswick</item>
        <item>Buchanan</item>
        <item>Buckingham</item>
        <item>Buena Vista</item>
        <item>Campbell</item>
        <item>Caroline</item>
        <item>Carroll</item>
        <item>Charles City</item>
        <item>Charlotte</item>
        <item>Charlottesville</item>
        <item>Chesapeake</item>
        <item>Chesterfield</item>
        <item>Clarke</item>
        <item>Colonial Heights</item>
        <item>Covington</item>
        <item>Craig</item>
        <item>Culpeper</item>
        <item>Cumberland</item>
        <item>Danville</item>
        <item>Dickenson</item>
        <item>Dinwiddie</item>
        <item>Emporia</item>
        <item>Essex</item>
        <item>Fairfax (County)</item>
        <item>Fairfax (Ind. City)</item>
        <item>Falls Church</item>
        <item>Fauquier</item>
        <item>Floyd</item>
        <item>Fluvanna</item>
        <item>Franklin (County)</item>
        <item>Franklin (Ind. City)</item>
        <item>Frederick</item>
        <item>Fredericksburg</item>
        <item>Galax</item>
        <item>Giles</item>
        <item>Gloucester</item>
        <item>Goochland</item>
        <item>Grayson</item>
        <item>Greene</item>
        <item>Greensville</item>
        <item>Halifax</item>
        <item>Hampton</item>
        <item>Hanover</item>
        <item>Harrisonburg</item>
        <item>Henrico</item>
        <item>Henry</item>
        <item>Highland</item>
        <item>Isle Of Wight</item>
        <item>James City</item>
        <item>King And Queen</item>
        <item>King George</item>
        <item>King William</item>
        <item>Lancaster</item>
        <item>Lee</item>
        <item>Lexington</item>
        <item>Loudoun</item>
        <item>Louisa</item>
        <item>Lunenburg</item>
        <item>Lynchburg</item>
        <item>Madison</item>
        <item>Manassas</item>
        <item>Martinsville</item>
        <item>Mathews</item>
        <item>Mecklenburg</item>
        <item>Middlesex</item>
        <item>Montgomery</item>
        <item>Nelson</item>
        <item>New Kent</item>
        <item>Newport News</item>
        <item>Norfolk</item>
        <item>Northampton</item>
        <item>Northumberland</item>
        <item>Nottoway</item>
        <item>Orange</item>
        <item>Page</item>
        <item>Patrick</item>
        <item>Petersburg</item>
        <item>Pittsylvania</item>
        <item>Poquoson</item>
        <item>Portsmouth</item>
        <item>Powhatan</item>
        <item>Prince Edward</item>
        <item>Prince George</item>
        <item>Prince William</item>
        <item>Pulaski</item>
        <item>Radford</item>
        <item>Rappahannock</item>
        <item>Richmond (County)</item>
        <item>Richmond (Ind. City)</item>
        <item>Roanoke (County)</item>
        <item>Roanoke (Ind. City)</item>
        <item>Rockbridge</item>
        <item>Rockingham</item>
        <item>Russell</item>
        <item>Salem</item>
        <item>Scott</item>
        <item>Shenandoah</item>
        <item>Smyth</item>
        <item>South Boston</item>
        <item>Southampton</item>
        <item>Spotsylvania</item>
        <item>Stafford</item>
        <item>Staunton</item>
        <item>Suffolk</item>
        <item>Surry</item>
        <item>Sussex</item>
        <item>Tazewell</item>
        <item>Virginia Beach</item>
        <item>Warren</item>
        <item>Washington</item>
        <item>Waynesboro</item>
        <item>Westmoreland</item>
        <item>Williamsburg</item>
        <item>Winchester</item>
        <item>Wise</item>
        <item>Wythe</item>
        <item>York</item>
    </string-array>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_list_item_click">ListItemClickActivity</string>
</resources>
